[gd_scene load_steps=3 format=3 uid="uid://c775acu4g7wdd"]

[ext_resource type="Script" path="res://SummoningAbility.gd" id="1_ujkfq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bbm7e"]
bg_color = Color(0.407843, 0.219608, 0.423529, 1)
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.24, 0.13, 0.25, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="SummoningAbility" type="PanelContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(100, 0)
offset_right = 60.0
offset_bottom = 118.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bbm7e")
script = ExtResource("1_ujkfq")
key = "Q"

[node name="MarginContainer" type="MarginContainer" parent="."]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="Key_Text" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_font_sizes/font_size = 20
text = "Q"

[node name="Cost_Text" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
modulate = Color(1, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_font_sizes/font_size = 20
text = "20"
horizontal_alignment = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
expand_mode = 5

[node name="Desc" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "TEST HERE"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Desc2" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "TEST HERE"
horizontal_alignment = 1
autowrap_mode = 2
